--- a/_config.yaml
+++ b/_config.yaml
@@ -1,3 +1,3 @@
 title: "Connor Sicheri"
 description: "My coursework, projects, and blog"
-theme: minima  # You can change this to another theme later
+theme: Architect  # You can change this to another theme later
