--- a/_config.yaml
+++ b/_config.yaml
@@ -1,6 +1,6 @@
 title: "Connor Sicheri"
 description: "My coursework, projects, and blog"
-theme: Modernist  # You can change this to another theme later
+theme: Architect  # You can change this to another theme later
 
 # Navigation links
 header_pages:
