--- a/_config.yaml
+++ b/_config.yaml
@@ -1,6 +1,8 @@
 title: "Connor Sicheri"
 description: "My coursework, projects, and blog"
-theme: Architect  # You can change this to another theme later
+remote_theme: pages-themes/architect@v0.2.0
+plugins:
+  - jekyll-remote-theme
 
 # Navigation links
 header_pages:
