--- a/_config.yaml
+++ b/_config.yaml
@@ -1,8 +1,6 @@
 title: "Connor Sicheri"
 description: "My coursework, projects, and blog"
-remote_theme: pages-themes/architect@v0.2.0
-plugins:
-  - jekyll-remote-theme
+theme: jekyll-theme-minimal
 
 # Navigation links
 header_pages:
